--- a/marketwiz/package.json
+++ b/marketwiz/package.json
@@ -15,6 +15,8 @@
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1"
   },
@@ -32,5 +34,4 @@
     "vite": "^5.1.4"
   },
   "proxy": "http://localhost:5000"
-  
 }
